1.1.1 (01.06.2012):
- enable Add / Remove action buttons;
- do not propose to drop icon in place which equals its current index;
- fixed manual sorting;
- enable Apply button when configuration values are changed;
- some other fixes and changes.

1.1.0 (20.03.2012):
- added per launcher task connecting rules;
- use command name for default launcher matching rules;
- added toggle fullscreen, minimize, maximize etc actions;
- show item tool tip instantly;
- added support for showing tasks from current activity only;
- window context menus for entries of Entries menu also for not grouped tasks;
- added own pin task action;
- preparations for removing use of libtaskmanager;
- lots of other internal (tasks management related) improvements and fixes.

1.0.99 (05.03.2012):
- show title label by default;
- change default animation to glow;
- make thumbnails work with raster graphics system;
- hide option to use thumbnails if it is not available;
- added Settings entry to icon context menu;
- fix triggering actions with keyboard modifiers;
- remove custom implementation of task activation.

1.0.98 (26.02.2012):
- hide standard (and not working) launcher actions;
- do not allow to drop icon on itself;
- code cleanup.

1.0.97 (27.01.2012):
- adapted to changes in KDE 4.8.

1.0.96 (01.12.2011):
- removed group colors (upstream change in libtaskmanager);
- more friendly install script;
- removed compile time dependency on gettext.

1.0.95 (05.08.2011):
- fixed icons not disappearing after task is removed;
- removed konq dependency;
- show icon for non existing launchers;
- adapted to changes in KDE 4.7.

1.0.94 (28.08.2010):
- use action settings also for tool tips and task indicators;
- fix highlight windows effect in tool tip;
- some other fixes and changes.

1.0.93 (27.04.2010):
- fixed possible crash when checking for task window.

1.0.92 (25.02.2010):
- fixes in icon rendering.

1.0.91 (03.02.2010):
- added settings to manage how icon actions should be triggered;